ui: scrollbar fixes

--- a/labeling-ui/Styles/main.scss
+++ b/labeling-ui/Styles/main.scss
@@ -219,6 +219,10 @@ div.popup-panel {
   display: block;
 }
 
+.timer-container {
+  padding-right: 15px;
+}
+
 .thumbnail-zone {
   flex: 0 0 percentage(3/24);
 
